2003-07-25  Ettore Perazzoli  <ettore@ximian.com>

	* e-shell-window.c: Removed member ui_container from
	EShellWindowPrivate.
	(e_shell_window_peek_shell): New.
	(e_shell_window_peek_bonobo_ui_component): New.
	(e_shell_window_new): Don't set the ui_container anymore, just get
	it ourselves.  Also call e_shell_window_commands_setup().

	* e-shell-window-commands.c, e-shell-window-commands.h: New files
	implementing the commands for the shell windows.

	* e-shell.c (e_shell_close_all_windows): Renamed from
	e_shell_destroy_all_windows().

	* main.c (idle_cb): Create a new window using
	e_shell_create_window().

	* e-shell-importer.h: Define _E_SHELL_IMPORTER_H_ to prevent
	multiple inclusion, instead of __IMPORTER_H__.  Also, do not
	#include <bonobo/bonobo-ui-component.h>.

	* e-shell-importer.c (e_shell_importer_start_import): Renamed from
	show_import_wizard().  Don't get any args.

2003-07-24  Ettore Perazzoli  <ettore@ximian.com>

	* main.c: Remove the global evolution_directory variable.
	(main): Just declare, assign and free the evolution_directory
	variable here.  Also, use g_idle_add() instead of gtk_idle_add().
	(idle_cb): Don't pass the evolution directory path to
	e_shell_new() anymore, since that arg is gone.

	* e-shell.c: Remove member local_directory from EShellPrivate.
	(impl_finalize): Don't free.
	(e_shell_init): Don't NULL.
	(e_shell_construct): Removed arg local_directory.
	(e_shell_new): Likewise.
	(e_shell_construct): Don't call e_setup_check_config() here.
	(e_shell_get_local_directory): Removed.

2003-07-24  Ettore Perazzoli  <ettore@ximian.com>

	* main.c: Removed global variable "no_splash".
	(idle_cb): Updated to not pass the splash argument to
	e_shell_new().
	(main): Removed "--no-splash" option.

	* e-shell.c: Removed members storage_set, local_storage,
	summary_storage, folder_type_registry, component_registry,
	corba_storage_registry from struct EShellPrivate.
	(setup_corba_storages): Removed.
	(e_shell_construct): Don't invoke.